--- a/index.html
+++ b/index.html
@@ -71,15 +71,12 @@
             <!--
             <svg class="lnr mt-auto mr-3 my-3 lnr-cart"><use xlink:href="#lnr-cart"></use></svg>
             -->
-            <button class="btn btn-dark my-2 my-sm-0" type="submit"><svg class="lnr lnr-cart"><use xlink:href="#lnr-cart"></use></svg></button>
+            <button class="btn btn-dark my-2 my-sm-0" type="submit"  ><svg class="lnr lnr-cart"><use xlink:href="#lnr-cart"></use><a href="cart.html"></a></svg></button>
         </nav> 
         <!-- breadcrumb -->
         <section>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb bg-white my-2 ml-2">
-                    <!-- это иконка с домиком, но у меня не получилось её выровнять нормально
-                    <li class="breadcrumb-item active" aria-current="page"><button class="btn btn-link btn-lg my-2 my-sm-0" type="submit"><svg class="lnr lnr-home"><use xlink:href="#lnr-home"></use></svg></button></li>
-                    -->
                     <li class="breadcrumb-item active" aria-current="page">Avaleht</li>
                 </ol>
             </nav>  
