--- a/index.html
+++ b/index.html
@@ -83,6 +83,19 @@
         </section>
         <!-- jumbotron --->
         <!-- TODO! --->
+        <div class="jumbotron">
+            <div class = "container">
+            <h1 class="display-4">Mina olen jumbotron!</h1>
+            <p class="lead">Kui see tekst siin ka Teie tähelepanu ei paelu, siis loen jumbotroni ebaõnnestunuks!</p>
+            <hr class="my-4">
+            <p>Siin võiks olla veidi vähemtähtis tekst, millega lugejate tähelepanu võita...</p>
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="#" role="button">Mõtetu nupp</a>
+            </p>
+            </div>
+        </div>
+
+
         <!-- tooted --->
         <section>
             <div class="container">
