--- a/cart.html
+++ b/cart.html
@@ -62,6 +62,7 @@
                     <a class="dropdown-item" href="#">Niisutus ja toitmine</a>
                     <a class="dropdown-item" href="#">Koorijad ja maskid</a>
                 </div>
+            <li class="nav-item"><a class="nav-link" href="meist.html">Meist</a></li>
             </li>
         </ul>
         <!-- search -->
@@ -118,12 +119,107 @@
                     <p>Tarne: <span class="text-primary">tasuta</span></p>
                     <p>Kokku: <span class="text-primary">15.99&#8364;</span></p>
                 </div>
-                <div class="p-2 mx-auto">
-                    <a href="kinnitus.html" class="btn btn-dark btn-lg mb-3">Maksa</a>
-                </div>
+
+                <!--
+                                <div class="p-2 mx-auto">
+                                    <a href="kinnitus.html" class="btn btn-dark btn-lg mb-3">Maksa</a>
+                                </div>
+
+                    -->
             </div>
             <div class="col-lg-6">
                 <!-- TODO! --->
+                <!-- Krediitkaart --->
+                <div class="padding">
+                    <div class="row">
+                        <div class="col-sm-9">
+                            <div class="card">
+                                <div class="card-header">
+                                    <strong>Krediitkaart</strong>
+                                    <small>Sisesta krediitkaardi andmed</small>
+                                </div>
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-sm-12">
+                                            <div class="form-group">
+                                                <label for="name">Nimi</label>
+                                                <input class="form-control" id="name" type="text"
+                                                       placeholder="Kaardiomaniku ees- ja perekonnanimi">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-12">
+                                            <div class="form-group">
+                                                <label for="ccnumber">Krediitkaardi number</label>
+                                                <div class="input-group">
+                                                    <input class="form-control" type="text"
+                                                           placeholder="0000 0000 0000 0000" autocomplete="email">
+                                                    <div class="input-group-append">
+                                        <span class="input-group-text">
+                                            <i class="mdi mdi-credit-card"></i>
+                                        </span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="form-group col-sm-4">
+                                            <label for="ccmonth">Kuu</label>
+                                            <select class="form-control" id="ccmonth">
+                                                <option>1</option>
+                                                <option>2</option>
+                                                <option>3</option>
+                                                <option>4</option>
+                                                <option>5</option>
+                                                <option>6</option>
+                                                <option>7</option>
+                                                <option>8</option>
+                                                <option>9</option>
+                                                <option>10</option>
+                                                <option>11</option>
+                                                <option>12</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group col-sm-4">
+                                            <label for="ccyear">Aasta</label>
+                                            <select class="form-control" id="ccyear">
+                                                <option>2014</option>
+                                                <option>2015</option>
+                                                <option>2016</option>
+                                                <option>2017</option>
+                                                <option>2018</option>
+                                                <option>2019</option>
+                                                <option>2020</option>
+                                                <option>2021</option>
+                                                <option>2022</option>
+                                                <option>2023</option>
+                                                <option>2024</option>
+                                                <option>2025</option>
+                                            </select>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            <div class="form-group">
+                                                <label for="cvv">CVV/CVC</label>
+                                                <input class="form-control" id="cvv" type="text" placeholder="123">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card-footer">
+                                    <button class="btn btn-sm btn-success float-right" type="submit">
+                                        <i class="mdi mdi-gamepad-circle"></i> Maksa selle kaardiga
+                                    </button>
+                                    <button class="btn btn-sm btn-danger" type="reset">
+                                        <i class="mdi mdi-lock-reset"></i> Tühista
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
@@ -208,7 +304,7 @@
                             class="text-white"
                             role="button"
                             href="https://www.facebook.com">
-                            <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-facebook-f"></i>
                     </a>
 
 
@@ -218,7 +314,7 @@
                             class="text-white"
                             role="button"
                             href="https://www.twitter.com">
-                            <i class="fab fa-twitter"></i>
+                        <i class="fab fa-twitter"></i>
                     </a>
 
                     <!-- Google -->
@@ -227,7 +323,7 @@
                             class="text-white"
                             role="button"
                             href="https://www.google.com">
-                            <i class="fab fa-google"></i>
+                        <i class="fab fa-google"></i>
                     </a>
 
                     <!-- Instagram -->
@@ -236,7 +332,7 @@
                             class="text-white"
                             role="button"
                             href="https://www.instagram.com">
-                            <i class="fab fa-instagram"></i>
+                        <i class="fab fa-instagram"></i>
                     </a>
                     <!-- Rate.ee -->
                     <a
