--- a/meist.html
+++ b/meist.html
@@ -116,7 +116,7 @@
 
                         <p class="text-muted card-text"> vladimir@nahk.ee</p>
 
-                        <a role="button" href="toode.html" class="btn btn-outline-dark">Esita erisoov!</a>
+                        <a role="button" href="erisoov.html" class="btn btn-outline-dark">Esita erisoov!</a>
 
                     </div>
 
@@ -134,7 +134,7 @@
 
                         <p class="text-muted card-text"> chuck@nahk.ee</p>
 
-                        <a role="button" href="#" class="btn btn-outline-dark">Kuhu kütame?</a>
+                        <a role="button" href="https://parade.com/968666/parade/chuck-norris-jokes/" class="btn btn-outline-dark">Chuck Norris</a>
 
                     </div>
 
@@ -148,11 +148,11 @@
 
                     <div class="card-body">
 
-                        <h5><a href="#" class="text-dark">Pakendaja Amanda</a></h5>
+                        <h5><a href="#" class="text-dark">Pakendaja Ülari</a></h5>
 
-                        <p class="text-muted card-text"> amanda@nahk.ee </p>
+                        <p class="text-muted card-text"> ylari@nahk.ee </p>
 
-                        <a role="button" href="#" class="btn btn-outline-dark">Lööme kasti?</a>
+                        <a role="button" href="https://www.facebook.com/ulari.ukssarv" class="btn btn-outline-dark">Tule mulle külla!</a>
 
                     </div>
 
@@ -166,77 +166,53 @@
 
                     <div class="card-body">
 
-                        <h5><a href="#" class="text-dark">Sekretär Marusja</a></h5>
+                        <h5><a href="#" class="text-dark">Sekretär Pamela</a></h5>
 
-                        <p class="text-muted card-text"> marusja@nahk.ee</p>
+                        <p class="text-muted card-text"> pammy@nahk.ee</p>
 
                         <a role="button" href="#" class="btn btn-outline-dark">Helista mulle!</a>
-
                     </div>
-
                 </div>
-
             </div>
-<!--
-            <div class="col-md-4 mb-4">
-
-                <div class="card shadow-sm border-0 h-100 text-center" ><a href="#"><img src="soap.png" alt="" class="card-img-top"></a>
-
-                    <div class="card-body">
-
-                        <h5><a href="#" class="text-dark">Toode 4</a></h5>
-
-                        <p class="text-muted card-text"> 18.99&#8364;</p>
-
-                        <a role="button" href="#" class="btn btn-outline-dark">Vaata</a>
-
-                    </div>
-
-                </div>
-
-            </div>
-
-            <div class="col-md-4 mb-4">
-
-                <div class="card shadow-sm border-0 h-100 text-center" ><a href="#"><img src="soap.png" alt="" class="card-img-top"></a>
-
-                    <div class="card-body">
-
-                        <h5><a href="#" class="text-dark">Toode 5</a></h5>
-
-                        <p class="text-muted card-text"> 1.99&#8364;</p>
-
-                        <a role="button" href="#" class="btn btn-outline-dark">Vaata</a>
-
-                    </div>
-
-                </div>
-
-            </div>
-
-            <div class="col-md-4 mb-4">
-
-                <div class="card shadow-sm border-0 h-100 text-center" ><a href="#"><img src="soap.png" alt="" class="card-img-top"></a>
-
-                    <div class="card-body">
-
-                        <h5><a href="#" class="text-dark">Toode 6</a></h5>
-
-                        <p class="text-muted card-text"> 5.99&#8364;</p>
-
-                        <a role="button" href="#" class="btn btn-outline-dark">Vaata</a>
-
-                    </div>
-
-                </div>
-
-            </div>
-
-        </div>
--->
-    </div>
-
 </section>
+
+
+<!-- Karuselli algus -->
+
+
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="1s.jpg" alt="Esimene slaid">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="2s.jpg" alt="Teine slaid">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="3s.jpg" alt="Kolmas slaid">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="4s.jpg" alt="Neljas slaid">
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+
+<!-- Karuselli lõpp -->
+
 
 <!-- jalus --->
 <footer class="text-center text-lg-start text-white" style="background-color: #343a40">
