--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
         <div class="jumbotron">
             <div class = "container">
             <h1 class="display-4">Mina olen jumbotron!</h1>
-            <p class="lead">Kui see tekst siin ka Teie tähelepanu ei paelu, siis loen jumbotroni ebaõnnestunuks!</p>
+            <p class="lead">Kui see tekst siin ka Teie tähelepanu ei paelu, siis loen oma esimese jumbotroni ebaõnnestunuks!</p>
             <hr class="my-4">
             <p>Siin võiks olla veidi vähemtähtis tekst, millega lugejate tähelepanu võita...</p>
             <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Mõtetu nupp</a>
+                <a class="btn btn-outline-dark" href="#" role="button">Mõtetu nupp</a>
             </p>
             </div>
         </div>
