--- a/OOP_code.html
+++ b/OOP_code.html
@@ -8,7 +8,8 @@
     <meta name="author" content="Raivo Kasepuu">
     <title>Meist</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css"
           integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
     <!-- minu CSS -->
@@ -22,7 +23,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class=" col my-3 text-center ">
-                <a href="index.html"><img src="logo2.png" width="50%"></a>
+                <a href="index.html"><img src="logo2.png" width="100%"></a>
             </div>
         </div>
     </div>
@@ -34,118 +35,28 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow">
     <!-- Alternatiivne kujundus sinisega     <nav class="navbar navbar-expand-lg navbar-dark bg-primary"-->
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav mr-auto">
 
-            <li class="nav-item"><a class="nav-link" href="#">Avaleht</a></li>
-            <li class="nav-item"><a class="nav-link" href="OOP_code.html">Koodinäited</a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html#">Avaleht</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Koodinäited</a></li>
             <li class="nav-item"><a class="nav-link" href="OOP_meist.html">Meist</a></li>
         </ul>
 
-        <!-- search -->
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Otsi" aria-label="Search">
-            <button class="btn btn-outline-white my-2 my-sm-0" type="submit"><svg class="lnr lnr-magnifier"><use xlink:href="#lnr-magnifier"></use></svg></button>
-        </form>
 
-    </div>
-
-    <button class="btn btn-dark my-2 my-sm-0" type="submit">
-        <svg class="lnr lnr-cart">
-            <use xlink:href="#lnr-cart"></use>
-        </svg>
-    </button>
 </nav>
 <section>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb bg-white my-2 ml-2">
             <li class="breadcrumb-item"><a href="index.html">Avaleht</a></li>
-            <li class="breadcrumb-item active">Meist</li>
+            <li class="breadcrumb-item active">Koodinäited</li>
         </ol>
     </nav>
-</section>
-
-
-<section>
-
-    <div class="container">
-
-        <h2 class="h mb-3">Meie meeskond</h2>
-
-        <div class="row">
-
-            <div class="col-md-3 mb-3">
-
-                <div class="card shadow-sm border-0 h-100 text-center" ><a href="#"><img src="1.jpg" alt="" class="card-img-top"></a>
-
-                    <div class="card-body">
-
-                        <h5><a href="#" class="text-dark">Lihunik Vladimir</a></h5>
-
-                        <p class="text-muted card-text"> vladimir@nahk.ee</p>
-
-                        <a role="button" href="erisoov.html" class="btn btn-outline-dark">Esita erisoov!</a>
-
-                    </div>
-
-                </div>
-
-            </div>
-
-            <div class="col-md-3 mb-3">
-
-                <div class="card shadow-sm border-0 h-100 text-center" ><a href="#"><img src="2.jpg" alt="" class="card-img-top"></a>
-
-                    <div class="card-body">
-
-                        <h5><a href="#" class="text-dark">Logistik Chuck</a></h5>
-
-                        <p class="text-muted card-text"> chuck@nahk.ee</p>
-
-                        <a role="button" href="https://parade.com/968666/parade/chuck-norris-jokes/" class="btn btn-outline-dark">Chuck Norris</a>
-
-                    </div>
-
-                </div>
-
-            </div>
-
-            <div class="col-md-3 mb-3">
-
-                <div class="card shadow-sm border-0 h-100 text-center" ><a href="#"><img src="3.jpg" alt="" class="card-img-top"></a>
-
-                    <div class="card-body">
-
-                        <h5><a href="#" class="text-dark">Pakendaja Ülari</a></h5>
-
-                        <p class="text-muted card-text"> ylari@nahk.ee </p>
-
-                        <a role="button" href="https://www.facebook.com/ulari.ukssarv" class="btn btn-outline-dark">Tule mulle külla!</a>
-
-                    </div>
-
-                </div>
-
-            </div>
-
-            <div class="col-md-3 mb-3">
-
-                <div class="card shadow-sm border-0 h-100 text-center" ><a href="#"><img src="4.jpg" alt="" class="card-img-top"></a>
-
-                    <div class="card-body">
-
-                        <h5><a href="#" class="text-dark">Sekretär Pamela</a></h5>
-
-                        <p class="text-muted card-text"> pammy@nahk.ee</p>
-
-                        <a role="button" href="#" class="btn btn-outline-dark">Helista mulle!</a>
-                    </div>
-                </div>
-            </div>
 </section>
 
 
@@ -158,6 +69,8 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
@@ -171,6 +84,12 @@
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" src="4s.jpg" alt="Neljas slaid">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="2s.jpg" alt="Viies slaid">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="3s.jpg" alt="Kuues slaid">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -313,11 +232,17 @@
 </footer>
 <!-- Jalus -->
 <!-- jQuery -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
 <!-- Popper.js -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
 <!-- Boostrap JS -->
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 <!-- ikoonid -->
 <script src="https://cdn.linearicons.com/free/1.0.0/svgembedder.min.js"></script>
 </body>
