--- a/OOP_meist.html
+++ b/OOP_meist.html
@@ -22,7 +22,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class=" col my-3 text-center ">
-                <a href="index.html"><img src="logo2.png" width="50%"></a>
+                <a href="index.html"><img src="logo2.png" width="100%"></a>
             </div>
         </div>
     </div>
@@ -41,24 +41,12 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav mr-auto">
 
-            <li class="nav-item"><a class="nav-link" href="#">Avaleht</a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html">Avaleht</a></li>
             <li class="nav-item"><a class="nav-link" href="OOP_code.html">Koodinäited</a></li>
-            <li class="nav-item"><a class="nav-link" href="OOP_meist.html">Meist</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Meist</a></li>
         </ul>
 
-        <!-- search -->
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Otsi" aria-label="Search">
-            <button class="btn btn-outline-white my-2 my-sm-0" type="submit"><svg class="lnr lnr-magnifier"><use xlink:href="#lnr-magnifier"></use></svg></button>
-        </form>
 
-    </div>
-
-    <button class="btn btn-dark my-2 my-sm-0" type="submit">
-        <svg class="lnr lnr-cart">
-            <use xlink:href="#lnr-cart"></use>
-        </svg>
-    </button>
 </nav>
 <section>
     <nav aria-label="breadcrumb">
@@ -84,12 +72,12 @@
 
                     <div class="card-body">
 
-                        <h5><a href="#" class="text-dark">Lihunik Vladimir</a></h5>
+                        <h5><a href="#" class="text-dark">Arendusjuht Mario</a></h5>
 
-                        <p class="text-muted card-text"> vladimir@nahk.ee</p>
-
+                        <p class="text-muted card-text"> mario@laicamaica.ee</p>
+                        <!-- search
                         <a role="button" href="erisoov.html" class="btn btn-outline-dark">Esita erisoov!</a>
-
+                        -->
                     </div>
 
                 </div>
@@ -102,12 +90,13 @@
 
                     <div class="card-body">
 
-                        <h5><a href="#" class="text-dark">Logistik Chuck</a></h5>
+                        <h5><a href="#" class="text-dark">Turundusjuht Raivo</a></h5>
 
-                        <p class="text-muted card-text"> chuck@nahk.ee</p>
+                        <p class="text-muted card-text"> raivo@laicamaica.ee</p>
 
-                        <a role="button" href="https://parade.com/968666/parade/chuck-norris-jokes/" class="btn btn-outline-dark">Chuck Norris</a>
-
+                        <!-- search
+           <a role="button" href="erisoov.html" class="btn btn-outline-dark">Esita erisoov!</a>
+           -->
                     </div>
 
                 </div>
@@ -120,12 +109,13 @@
 
                     <div class="card-body">
 
-                        <h5><a href="#" class="text-dark">Pakendaja Ülari</a></h5>
+                        <h5><a href="#" class="text-dark">Inspiraator Ülari</a></h5>
 
-                        <p class="text-muted card-text"> ylari@nahk.ee </p>
+                        <p class="text-muted card-text"> ylari@laicamaica.ee </p>
 
-                        <a role="button" href="https://www.facebook.com/ulari.ukssarv" class="btn btn-outline-dark">Tule mulle külla!</a>
-
+                        <!-- search
+   <a role="button" href="erisoov.html" class="btn btn-outline-dark">Esita erisoov!</a>
+   -->
                     </div>
 
                 </div>
@@ -140,9 +130,12 @@
 
                         <h5><a href="#" class="text-dark">Sekretär Pamela</a></h5>
 
-                        <p class="text-muted card-text"> pammy@nahk.ee</p>
+                        <p class="text-muted card-text"> pammy@laicamaica.ee</p>
 
-                        <a role="button" href="#" class="btn btn-outline-dark">Helista mulle!</a>
+
+                        <!-- search
+  <a role="button" href="erisoov.html" class="btn btn-outline-dark">Esita erisoov!</a>
+  -->
                     </div>
                 </div>
             </div>
@@ -161,16 +154,16 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="d-block w-100" src="1s.jpg" alt="Esimene slaid">
+            <img class="d-block w-100" src="m1.png" alt="Esimene slaid">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="2s.jpg" alt="Teine slaid">
+            <img class="d-block w-100" src="m2.png" alt="Teine slaid">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="3s.jpg" alt="Kolmas slaid">
+            <img class="d-block w-100" src="m3.png" alt="Kolmas slaid">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="4s.jpg" alt="Neljas slaid">
+            <img class="d-block w-100" src="m4.png" alt="Neljas slaid">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -184,6 +177,7 @@
 </div>
 
 <!-- Karuselli lõpp -->
+
 
 <!-- jalus --->
 <footer class="text-center text-lg-start text-white" style="background-color: #343a40">
