--- a/index_old.html
+++ b/index_old.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="OOP projekt">
-        <meta name="author" content="Raivo Kasepuu">
+        <meta name="description" content=""> 
+        <meta name="author" content="">
         <title>Avaleht</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -20,7 +20,7 @@
         <header class="py-2">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-12 my-3 text-center"><a href="index.html"><img src="logo2.png" width="100%"></a></div>
+                    <div class="col-lg-12 my-3 text-center"><a href="index.html"><img src="logo2.png" width="50%"></a></div>              
                 </div>          
             </div>
         </header>
@@ -32,12 +32,47 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" href="#">Avaleht</a></li>
-                    <li class="nav-item"><a class="nav-link" href="OOP_code.html">Koodinäited</a></li>
-                    <li class="nav-item"><a class="nav-link" href="OOP_meist.html">Meist</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Vannitooted</a> 
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"> 
+                            <a class="dropdown-item" href="#">Vannisoolad</a> 
+                            <a class="dropdown-item" href="#">Vannipiimad</a> 
+                            <a class="dropdown-item" href="#">Vannipommid</a>
+                            <a class="dropdown-item" href="list.html">Seebid ja du&scaron;igeelid</a>
+                        </div> 
+                    </li> 
+                    <li class="nav-item dropdown"> 
+                        <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Kehahooldus</a> 
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"> 
+                            <a class="dropdown-item" href="#">Kehakreemid</a> 
+                            <a class="dropdown-item" href="#">Keha&otilde;lid</a> 
+                            <a class="dropdown-item" href="#">Kehakoorijad</a> 
+                            <a class="dropdown-item" href="#">Deodorandid</a> 
+                            <a class="dropdown-item" href="#">K&auml;te ja jalgade hooldus</a>  
+                        </div> 
+                    </li> 
+                    <li class="nav-item dropdown"> 
+                        <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">N&auml;ohooldus</a> 
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"> 
+                            <a class="dropdown-item" href="#">Puhastus ja toniseerimine</a> 
+                            <a class="dropdown-item" href="#">Niisutus ja toitmine</a> 
+                            <a class="dropdown-item" href="#">Koorijad ja maskid</a> 
+                        </div> 
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="meist.html">Meist</a></li>
                 </ul>
-
-        </nav>
-
+                <!-- search -->
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Otsi" aria-label="Search">
+                    <button class="btn btn-outline-white my-2 my-sm-0" type="submit"><svg class="lnr lnr-magnifier"><use xlink:href="#lnr-magnifier"></use></svg></button>
+                </form>
+            </div>
+            <!-- cart -->
+            <!--
+            <svg class="lnr mt-auto mr-3 my-3 lnr-cart"><use xlink:href="#lnr-cart"></use></svg>
+            -->
+            <button class="btn btn-dark my-2 my-sm-0" type="submit"  ><svg class="lnr lnr-cart"><use xlink:href="#lnr-cart"></use><a href="cart.html"></a></svg></button>
+        </nav> 
         <!-- breadcrumb -->
         <section>
             <nav aria-label="breadcrumb">
@@ -54,7 +89,7 @@
             <hr class="my-4">
             <p>Me joome suht vähe, kuid ikkagi ei suuda meenutada, et oleksime OOP-is veebi õppinud. OK, las see jääb seekord...</p>
             <p class="lead">
-                <a class="btn btn-outline-dark" href="#" role="button">Mõtetu nupp kaebuste esitamiseks</a>
+                <a class="btn btn-outline-dark" href="#" role="button">Mõtetu nupp</a>
             </p>
             </div>
         </div>
@@ -63,59 +98,59 @@
         <!-- tooted --->
         <section>
             <div class="container">
-                <h2 class="h mb-3">Meie tooted: </h2>
+                <h2 class="h mb-3">Koodinäited</h2>
                 <div class="row"> 
                     <div class="col-md-4 mb-4"> 
-                        <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="main10.png" alt="" class="card-img-top"></a>
+                        <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="soap.png" alt="" class="card-img-top"></a> 
                             <div class="card-body"> 
-                                <h5> <a href="#" class="text-dark">Peaklass, kuni 10 rida</a></h5>
+                                <h5> <a href="#" class="text-dark">Toode 1</a></h5>
                                 <p class="text-muted card-text"> 15.99&#8364;</p> 
-
-                            </div> 
-                        </div> 
-                    </div> 
-                    <div class="col-md-4 mb-4"> 
-                        <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="class5.png" alt="" class="card-img-top"></a>
-                            <div class="card-body"> 
-                                <h5> <a href="#" class="text-dark">Isendiklass, kuni 5 parameetrit</a></h5>
-                                <p class="text-muted card-text"> 12.99&#8364;</p> 
-
+                                <a role="button" href="toode.html" class="btn btn-outline-dark">Vaata</a>
                             </div> 
                         </div> 
                     </div> 
                     <div class="col-md-4 mb-4"> 
                         <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="soap.png" alt="" class="card-img-top"></a> 
                             <div class="card-body"> 
-                                <h5> <a href="#" class="text-dark">Must ruut, kuni 400px * 400px</a></h5>
+                                <h5> <a href="#" class="text-dark">Toode 2</a></h5>
+                                <p class="text-muted card-text"> 12.99&#8364;</p> 
+                                <a role="button" href="#" class="btn btn-outline-dark">Vaata</a>
+                            </div> 
+                        </div> 
+                    </div> 
+                    <div class="col-md-4 mb-4"> 
+                        <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="soap.png" alt="" class="card-img-top"></a> 
+                            <div class="card-body"> 
+                                <h5> <a href="#" class="text-dark">Toode 3</a></h5>
                                 <p class="text-muted card-text"> 9.99&#8364;</p> 
-
+                                <a role="button" href="#" class="btn btn-outline-dark">Vaata</a>
                             </div> 
                         </div> 
                     </div> 
                     <div class="col-md-4 mb-4"> 
-                        <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="main20.png" alt="" class="card-img-top"></a>
+                        <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="soap.png" alt="" class="card-img-top"></a> 
                             <div class="card-body"> 
-                                <h5> <a href="#" class="text-dark">Peaklass, kuni 20 rida</a></h5>
-                                <p class="text-muted card-text"> 27.99&#8364;</p>
-
+                                <h5> <a href="#" class="text-dark">Toode 4</a></h5>
+                                <p class="text-muted card-text"> 18.99&#8364;</p> 
+                                <a role="button" href="#" class="btn btn-outline-dark">Vaata</a>
                             </div> 
                         </div> 
                     </div> 
                     <div class="col-md-4 mb-4"> 
-                        <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="class10.png" alt="" class="card-img-top"></a>
+                        <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="soap.png" alt="" class="card-img-top"></a> 
                             <div class="card-body"> 
-                                <h5> <a href="#" class="text-dark">Isendiklass, kuni 10 parameetrit</a></h5>
-                                <p class="text-muted card-text"> 19.99&#8364;</p>
-
+                                <h5> <a href="#" class="text-dark">Toode 5</a></h5>
+                                <p class="text-muted card-text"> 1.99&#8364;</p> 
+                                <a role="button" href="#" class="btn btn-outline-dark">Vaata</a>
                             </div> 
                         </div> 
                     </div>
                     <div class="col-md-4 mb-4"> 
-                        <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="veeb2.png" alt="" class="card-img-top"></a>
+                        <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="soap.png" alt="" class="card-img-top"></a> 
                             <div class="card-body"> 
-                                <h5> <a href="#" class="text-dark">Veebiarendus, 20 rida</a></h5>
-                                <p class="text-muted card-text"> 39.99&#8364;</p>
-
+                                <h5> <a href="#" class="text-dark">Toode 6</a></h5>
+                                <p class="text-muted card-text"> 5.99&#8364;</p> 
+                                <a role="button" href="#" class="btn btn-outline-dark">Vaata</a>
                             </div> 
                         </div> 
                     </div> 
@@ -149,17 +184,16 @@
                                 Abiks lingid
                             </h6>
                             <p>
-                                <a href=https://moodle.ut.ee/ class="text-white">Tartu Ülikooli Moodle</a>
+                                <a class="text-white">Tartu Ülikooli Moodle</a>
                             </p>
                             <p>
-                                <a href=https://courses.cs.ut.ee/ class="text-white">Courses.cs.ut.ee</a>
+                                <a class="text-white">Courses.ee</a>
                             </p>
                             <p>
-                                <a href=https://www.facebook.com/martin.toode class="text-white">Martin Toode, FB</a>
+                                <a class="text-white">Martin Toode, FB</a>
                             </p>
                             <p>
-                                <a href=https://www.etis.ee/CV/Helle_Hein/est class="text-white">Helle Hein, ETIS</a>
-
+                                <a class="text-white">Helle Hein, ETIS</a>
                             </p>
                         </div>
 
@@ -169,10 +203,10 @@
                         <!-- Grid column -->
                         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                             <h6 class="text-uppercase mb-3 font-weight-bold">Kontaktid</h6>
-                            <p><i class="fas fa-home mr-3"></i> BillGeitsi 3B, Jüri, 75326</p>
-                            <p><i class="fas fa-envelope mr-3"></i> info@laicamaica.ee</p>
+                            <p><i class="fas fa-home mr-3"></i> Karukella 3, Jüri, 75326</p>
+                            <p><i class="fas fa-envelope mr-3"></i> info@nahk.ee</p>
                             <p><i class="fas fa-phone mr-3"></i> +372 55 12345</p>
-                            <p><i class="fas fa-print mr-3"></i> +372 55 54321</p>
+                            <p><i class="fas fa-print mr-3"></i> +372 55 12346</p>
                         </div>
                         <!-- Grid column -->
                     </div>
