--- a/OOP_code.html
+++ b/OOP_code.html
@@ -47,7 +47,7 @@
             <li class="nav-item"><a class="nav-link" href="#">Koodinäited</a></li>
             <li class="nav-item"><a class="nav-link" href="OOP_meist.html">Meist</a></li>
         </ul>
-
+    </div>
 
 </nav>
 <section>
