--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <li class="nav-item"><a class="nav-link" href="OOP_code.html">Koodinäited</a></li>
                     <li class="nav-item"><a class="nav-link" href="OOP_meist.html">Meist</a></li>
                 </ul>
-
+            </div>
         </nav>
 
         <!-- breadcrumb -->
