--- a/OOP_meist.html
+++ b/OOP_meist.html
@@ -45,7 +45,7 @@
             <li class="nav-item"><a class="nav-link" href="OOP_code.html">Koodinäited</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Meist</a></li>
         </ul>
-
+    </div>
 
 </nav>
 <section>
@@ -139,6 +139,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
 </section>
 
 
