--- a/meist.html
+++ b/meist.html
@@ -8,7 +8,8 @@
     <meta name="author" content="Raivo Kasepuu">
     <title>Meist</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css"
           integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
     <!-- minu CSS -->
@@ -34,7 +35,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow">
     <!-- Alternatiivne kujundus sinisega     <nav class="navbar navbar-expand-lg navbar-dark bg-primary"-->
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -49,7 +51,11 @@
         <!-- search -->
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Otsi" aria-label="Search">
-            <button class="btn btn-outline-white my-2 my-sm-0" type="submit"><svg class="lnr lnr-magnifier"><use xlink:href="#lnr-magnifier"></use></svg></button>
+            <button class="btn btn-outline-white my-2 my-sm-0" type="submit">
+                <svg class="lnr lnr-magnifier">
+                    <use xlink:href="#lnr-magnifier"></use>
+                </svg>
+            </button>
         </form>
 
     </div>
@@ -80,7 +86,8 @@
 
             <div class="col-md-3 mb-3">
 
-                <div class="card shadow-sm border-0 h-100 text-center" ><a href="#"><img src="1.jpg" alt="" class="card-img-top"></a>
+                <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="1.jpg" alt=""
+                                                                                        class="card-img-top"></a>
 
                     <div class="card-body">
 
@@ -98,7 +105,8 @@
 
             <div class="col-md-3 mb-3">
 
-                <div class="card shadow-sm border-0 h-100 text-center" ><a href="#"><img src="2.jpg" alt="" class="card-img-top"></a>
+                <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="2.jpg" alt=""
+                                                                                        class="card-img-top"></a>
 
                     <div class="card-body">
 
@@ -106,7 +114,8 @@
 
                         <p class="text-muted card-text"> chuck@nahk.ee</p>
 
-                        <a role="button" href="https://parade.com/968666/parade/chuck-norris-jokes/" class="btn btn-outline-dark">Chuck Norris</a>
+                        <a role="button" href="https://parade.com/968666/parade/chuck-norris-jokes/"
+                           class="btn btn-outline-dark">Chuck Norris</a>
 
                     </div>
 
@@ -116,7 +125,8 @@
 
             <div class="col-md-3 mb-3">
 
-                <div class="card shadow-sm border-0 h-100 text-center" ><a href="#"><img src="3.jpg" alt="" class="card-img-top"></a>
+                <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="3.jpg" alt=""
+                                                                                        class="card-img-top"></a>
 
                     <div class="card-body">
 
@@ -124,7 +134,8 @@
 
                         <p class="text-muted card-text"> ylari@nahk.ee </p>
 
-                        <a role="button" href="https://www.facebook.com/ulari.ukssarv" class="btn btn-outline-dark">Tule mulle külla!</a>
+                        <a role="button" href="https://www.facebook.com/ulari.ukssarv" class="btn btn-outline-dark">Tule
+                            mulle külla!</a>
 
                     </div>
 
@@ -134,7 +145,8 @@
 
             <div class="col-md-3 mb-3">
 
-                <div class="card shadow-sm border-0 h-100 text-center" ><a href="#"><img src="4.jpg" alt="" class="card-img-top"></a>
+                <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="4.jpg" alt=""
+                                                                                        class="card-img-top"></a>
 
                     <div class="card-body">
 
@@ -146,6 +158,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
 </section>
 
 
@@ -313,11 +327,17 @@
 </footer>
 <!-- Jalus -->
 <!-- jQuery -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
 <!-- Popper.js -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
 <!-- Boostrap JS -->
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 <!-- ikoonid -->
 <script src="https://cdn.linearicons.com/free/1.0.0/svgembedder.min.js"></script>
 </body>
