--- a/OOP_meist.html
+++ b/OOP_meist.html
@@ -86,7 +86,7 @@
 
             <div class="col-md-3 mb-3">
 
-                <div class="card shadow-sm border-0 h-100 text-center" ><a href="#"><img src="2r.jpg" alt="" class="card-img-top"></a>
+                <div class="card shadow-sm border-0 h-100 text-center" ><a href="#"><img src="2.jpg" alt="" class="card-img-top"></a>
 
                     <div class="card-body">
 
