--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         <div class="jumbotron">
             <div class = "container">
             <h1 class="display-4">Tähelepanu!</h1>
-            <p class="lead">Kui me nüüd selle, bootstrapis tehtud ja igati adaptiivse veebilehe eest, oma OOP-i projektis plusspunkte ei saa, siis oleme me kõik pettunud!</p>
+            <p class="lead">See siin on Bootstrapis tehtud, igati adaptiivne veebileht. Loodud spetsiaalselt OOP projekti kaitsmiseks.
+                Me nägime sellega mitu tundi vaeva ja kui me selle eest plusspunkte ei saa, siis oleme me kõik pettunud!</p>
             <hr class="my-4">
             <p>Me joome suht vähe, kuid ikkagi ei suuda meenutada, et oleksime OOP-is veebi õppinud. OK, las see jääb seekord...</p>
             <p class="lead">
