--- a/OOP_tooted.html
+++ b/OOP_tooted.html
@@ -57,7 +57,7 @@
                     <div class="col-md-4 mb-4"> 
                         <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="main10.png" alt="" class="card-img-top"></a>
                             <div class="card-body"> 
-                                <h5> <a href="#" class="text-dark">Peaklass, kuni 10 rida</a></h5>
+                                <h5> <a class="text-dark">Peaklass, kuni 10 rida</a></h5>
                                 <p class="text-muted card-text"> 15.99&#8364;</p> 
 
                             </div> 
@@ -66,7 +66,7 @@
                     <div class="col-md-4 mb-4"> 
                         <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="class5.png" alt="" class="card-img-top"></a>
                             <div class="card-body"> 
-                                <h5> <a href="#" class="text-dark">Isendiklass, kuni 5 parameetrit</a></h5>
+                                <h5> <a class="text-dark">Isendiklass, kuni 5 parameetrit</a></h5>
                                 <p class="text-muted card-text"> 12.99&#8364;</p> 
 
                             </div> 
@@ -75,7 +75,7 @@
                     <div class="col-md-4 mb-4"> 
                         <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="soap.png" alt="" class="card-img-top"></a> 
                             <div class="card-body"> 
-                                <h5> <a href="#" class="text-dark">Must ruut, kuni 400px * 400px</a></h5>
+                                <h5> <a class="text-dark">Must ruut, kuni 400px * 400px</a></h5>
                                 <p class="text-muted card-text"> 9.99&#8364;</p> 
 
                             </div> 
@@ -84,7 +84,7 @@
                     <div class="col-md-4 mb-4"> 
                         <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="main20.png" alt="" class="card-img-top"></a>
                             <div class="card-body"> 
-                                <h5> <a href="#" class="text-dark">Peaklass, kuni 20 rida</a></h5>
+                                <h5> <a class="text-dark">Peaklass, kuni 20 rida</a></h5>
                                 <p class="text-muted card-text"> 27.99&#8364;</p>
 
                             </div> 
@@ -93,7 +93,7 @@
                     <div class="col-md-4 mb-4"> 
                         <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="class10.png" alt="" class="card-img-top"></a>
                             <div class="card-body"> 
-                                <h5> <a href="#" class="text-dark">Isendiklass, kuni 10 parameetrit</a></h5>
+                                <h5> <a class="text-dark">Isendiklass, kuni 10 parameetrit</a></h5>
                                 <p class="text-muted card-text"> 19.99&#8364;</p>
 
                             </div> 
@@ -102,7 +102,7 @@
                     <div class="col-md-4 mb-4"> 
                         <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="veeb2.png" alt="" class="card-img-top"></a>
                             <div class="card-body"> 
-                                <h5> <a href="#" class="text-dark">Veebiarendus, 20 rida</a></h5>
+                                <h5> <a class="text-dark">Veebiarendus, 20 rida</a></h5>
                                 <p class="text-muted card-text"> 39.99&#8364;</p>
 
                             </div> 
