--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" href="#">Avaleht</a></li>
+                    <li class="nav-item"><a class="nav-link" href="OOP_tooted.html">Tooted</a></li>
                     <li class="nav-item"><a class="nav-link" href="OOP_code.html">Koodinäited</a></li>
                     <li class="nav-item"><a class="nav-link" href="OOP_meist.html">Meist</a></li>
                 </ul>
@@ -60,70 +61,7 @@
             </div>
         </div>
 
-
-        <!-- tooted --->
-        <section>
-            <div class="container">
-                <h2 class="h mb-3">Meie tooted: </h2>
-                <div class="row"> 
-                    <div class="col-md-4 mb-4"> 
-                        <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="main10.png" alt="" class="card-img-top"></a>
-                            <div class="card-body"> 
-                                <h5> <a href="#" class="text-dark">Peaklass, kuni 10 rida</a></h5>
-                                <p class="text-muted card-text"> 15.99&#8364;</p> 
-
-                            </div> 
-                        </div> 
-                    </div> 
-                    <div class="col-md-4 mb-4"> 
-                        <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="class5.png" alt="" class="card-img-top"></a>
-                            <div class="card-body"> 
-                                <h5> <a href="#" class="text-dark">Isendiklass, kuni 5 parameetrit</a></h5>
-                                <p class="text-muted card-text"> 12.99&#8364;</p> 
-
-                            </div> 
-                        </div> 
-                    </div> 
-                    <div class="col-md-4 mb-4"> 
-                        <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="soap.png" alt="" class="card-img-top"></a> 
-                            <div class="card-body"> 
-                                <h5> <a href="#" class="text-dark">Must ruut, kuni 400px * 400px</a></h5>
-                                <p class="text-muted card-text"> 9.99&#8364;</p> 
-
-                            </div> 
-                        </div> 
-                    </div> 
-                    <div class="col-md-4 mb-4"> 
-                        <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="main20.png" alt="" class="card-img-top"></a>
-                            <div class="card-body"> 
-                                <h5> <a href="#" class="text-dark">Peaklass, kuni 20 rida</a></h5>
-                                <p class="text-muted card-text"> 27.99&#8364;</p>
-
-                            </div> 
-                        </div> 
-                    </div> 
-                    <div class="col-md-4 mb-4"> 
-                        <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="class10.png" alt="" class="card-img-top"></a>
-                            <div class="card-body"> 
-                                <h5> <a href="#" class="text-dark">Isendiklass, kuni 10 parameetrit</a></h5>
-                                <p class="text-muted card-text"> 19.99&#8364;</p>
-
-                            </div> 
-                        </div> 
-                    </div>
-                    <div class="col-md-4 mb-4"> 
-                        <div class="card shadow-sm border-0 h-100 text-center"><a href="#"><img src="veeb2.png" alt="" class="card-img-top"></a>
-                            <div class="card-body"> 
-                                <h5> <a href="#" class="text-dark">Veebiarendus, 20 rida</a></h5>
-                                <p class="text-muted card-text"> 39.99&#8364;</p>
-
-                            </div> 
-                        </div> 
-                    </div> 
-                </div>
-            </div>
-        </section>
-        <!-- jalus --->
+      <!-- jalus --->
         <footer class="text-center text-lg-start text-white" style="background-color: #343a40">
             <!-- Grid container -->
             <div class="container p-1 pb-0">
