--- a/OOP_tooted.html
+++ b/OOP_tooted.html
@@ -33,7 +33,7 @@
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Avaleht</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Tooted</a></li>
-                    <li class="nav-item"><a class="nav-link" href="OOP_code.html">Koodinäited</a></li>
+                    <li class="nav-item"><a class="nav-link" href="OOP_code.html">Presentatsioon</a></li>
                     <li class="nav-item"><a class="nav-link" href="OOP_meist.html">Meist</a></li>
                 </ul>
             </div>
