--- a/OOP_code.html
+++ b/OOP_code.html
@@ -45,7 +45,7 @@
 
             <li class="nav-item"><a class="nav-link" href="index.html#">Avaleht</a></li>
             <li class="nav-item"><a class="nav-link" href="OOP_tooted.html">Tooted</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Koodinäited</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Presentatsioon</a></li>
             <li class="nav-item"><a class="nav-link" href="OOP_meist.html">Meist</a></li>
         </ul>
     </div>
