--- a/OOP_meist.html
+++ b/OOP_meist.html
@@ -43,7 +43,7 @@
 
             <li class="nav-item"><a class="nav-link" href="index.html">Avaleht</a></li>
             <li class="nav-item"><a class="nav-link" href="OOP_tooted.html">Tooted</a></li>
-            <li class="nav-item"><a class="nav-link" href="OOP_code.html">Koodinäited</a></li>
+            <li class="nav-item"><a class="nav-link" href="OOP_code.html">Presentatsioon</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Meist</a></li>
 
         </ul>
