--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" href="#">Avaleht</a></li>
                     <li class="nav-item"><a class="nav-link" href="OOP_tooted.html">Tooted</a></li>
-                    <li class="nav-item"><a class="nav-link" href="OOP_code.html">Koodinäited</a></li>
+                    <li class="nav-item"><a class="nav-link" href="OOP_code.html">Presentatsioon</a></li>
                     <li class="nav-item"><a class="nav-link" href="OOP_meist.html">Meist</a></li>
                 </ul>
             </div>
