--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <hr class="my-4">
             <p>Me joome suht vähe, kuid ikkagi ei suuda meenutada, et oleksime OOP-is veebi õppinud. OK, las see jääb seekord...</p>
             <p class="lead">
-                <a class="btn btn-outline-dark" href="#" role="button">Mõtetu nupp kaebuste esitamiseks</a>
+                <a class="btn btn-outline-dark" href="#" role="button">Mõttetu nupp kaebuste esitamiseks</a>
             </p>
             </div>
         </div>
