--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
                 Me nägime sellega mitu tundi vaeva ja kui me selle eest plusspunkte ei saa, siis oleme me kõik pettunud!</p>
             <hr class="my-4">
             <p>Me joome suht vähe, kuid ikkagi ei suuda meenutada, et oleksime OOP-is veebi õppinud. OK, las see jääb seekord...</p>
-            <p class="lead">
+                <p>Aga kui Sa tahad õppida, kuidas ise sellist lahedat veebi teha, mis kohandub ka Su mobla ekraanile, siis on suureks abiks kursus "Veebilehtede loomine edasijõudnutele", LTAT.03.015</p>
+
+                <p class="lead">
                 <a class="btn btn-outline-dark" href="#" role="button">Mõttetu nupp kaebuste esitamiseks</a>
             </p>
             </div>
