--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <p>Me joome suht vähe, kuid ikkagi ei suuda meenutada, et oleksime OOP-is veebi õppinud. OK, las see jääb
             seekord...</p>
         <p>Aga kui Sa tahad õppida, kuidas ise sellist lahedat veebi teha, mis kohandub ka Su mobla ekraanile jne jne, siis on
-            suureks abiks kursus "Veebilehtede loomine edasijõudnutele", LTAT.03.015. Soovitame! See on väga popp kursus, kiirusta registreerimisega!</p>
+            suureks abiks kursus "Veebilehtede loomine edasijõudnutele", LTAT.03.015. Soovitame! Muideks, see on väga popp kursus! Kiirusta registreerimisega!</p>
 
         <p class="lead">
 
