--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div class="jumbotron">
     <div class="container">
         <h1 class="display-4">Tähelepanu!</h1>
-        <p class="lead">See siin on Bootstrapis tehtud, igati adaptiivne veebileht. Loodud spetsiaalselt OOP projekti
+        <p class="lead">See siin on Bootstrapis tehtud, igati adaptiivne veebileht. Kui ei usu, proovi seda vaadata oma telefonis. Loodud spetsiaalselt OOP projekti
             kaitsmiseks.
             Me nägime sellega mitu tundi vaeva ja kui me selle eest plusspunkte ei saa, siis oleme me kõik pettunud!</p>
         <hr class="my-4">
