--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             kaitsmiseks.
             Me nägime sellega mitu tundi vaeva ja kui me selle eest plusspunkte ei saa, siis oleme me kõik pettunud!</p>
         <hr class="my-4">
-        <p>Me joome suht vähe, kuid ikkagi ei suuda meenutada, et oleksime OOP-is veebi õppinud. OK, las see jääb
+        <p>Me joome suht vähe, kuid ikkagi ei me suuda meenutada, et oleksime OOP-is veebi õppinud... Või miks on vaja projekti presenteerida veebina. OK, las see jääb
             seekord...</p>
         <p>Aga kui Sa tahad õppida, kuidas ise sellist lahedat veebi teha, mis kohandub ka Su mobla ekraanile jne jne, siis on
             suureks abiks kursus "Veebilehtede loomine edasijõudnutele", LTAT.03.015. Soovitame! Muideks, see on väga popp kursus! Kiirusta registreerimisega!</p>
