--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 <script src="https://cdn.linearicons.com/free/1.0.0/svgembedder.min.js"></script>
 <script>
     function myFunction() {
-        alert('Sai ju öeldud, et mõttetu nupp? OK, nüüd siis tead, et ka javascript pole meile võõras! Ka seda õpid kursusel "Veebilehtede loomine edasijõudnutele", LTAT.03.015! Tervita Valeriat!');
+        alert('Sai ju öeldud, et mõttetu nupp? OK, nüüd siis tead, et ka javascript pole meile võõras! Ka seda õpid kursusel "Veebilehtede loomine edasijõudnutele", LTAT.03.015! Kui registreerud, tervita Valeriat!');
     }
 </script>
 
