--- a/index.html
+++ b/index.html
@@ -53,17 +53,14 @@
 <div class="jumbotron">
     <div class="container">
         <h1 class="display-4">Tähelepanu!</h1>
-        <p class="lead">See siin on Bootstrapis tehtud, igati adaptiivne veebileht. Kui ei usu, proovi seda vaadata oma telefonis. Loodud spetsiaalselt OOP projekti
-            kaitsmiseks.
-            Me nägime sellega mitu tundi vaeva ja kui me selle eest plusspunkte ei saa, siis oleme me kõik pettunud!</p>
+        <p class="lead">See siin on Bootstrapis tehtud, igati adaptiivne veebileht. Kui ei usu, proovi seda vaadata oma telefonis. Kõik toimib, nagu kellavärk! Loodud spetsiaalselt OOP projekti
+            kaitsmiseks. Me nägime sellega mitu tundi vaeva ja kui me selle eest plusspunkte ei saa, siis oleme me kõik pettunud! Isegi õppejõud!</p>
         <hr class="my-4">
         <p>Me joome suht vähe, kuid ikkagi ei me suuda meenutada, et oleksime OOP-is veebi õppinud... Või miks on vaja projekti presenteerida veebina. OK, las see jääb
             seekord...</p>
         <p>Aga kui Sa tahad õppida, kuidas ise sellist lahedat veebi teha, mis kohandub ka Su mobla ekraanile jne jne, siis on
             suureks abiks kursus "Veebilehtede loomine edasijõudnutele", LTAT.03.015. Soovitame! Muideks, see on väga popp kursus! Kiirusta registreerimisega!</p>
-
         <p class="lead">
-
             <button class="btn btn-outline-dark" onclick="myFunction()">Mõttetu nupp kaebuste esitamiseks</button>
         </p>
     </div>
@@ -152,8 +149,6 @@
                             href="https://www.facebook.com">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-
-
                     <!-- Twitter -->
                     <a
                             class="btn btn-outline-light btn-floating m-1"
@@ -162,7 +157,6 @@
                             href="https://www.twitter.com">
                         <i class="fab fa-twitter"></i>
                     </a>
-
                     <!-- Google -->
                     <a
                             class="btn btn-outline-light btn-floating m-1"
@@ -171,7 +165,6 @@
                             href="https://www.google.com">
                         <i class="fab fa-google"></i>
                     </a>
-
                     <!-- Instagram -->
                     <a
                             class="btn btn-outline-light btn-floating m-1"
@@ -209,7 +202,7 @@
 <script src="https://cdn.linearicons.com/free/1.0.0/svgembedder.min.js"></script>
 <script>
     function myFunction() {
-        alert('Sai ju öeldud, et mõttetu nupp? OK, nüüd siis tead, et ka javascript pole meile võõras! Ka seda õpid kursusel "Veebilehtede loomine edasijõudnutele", LTAT.03.015! Kui registreerud, tervita Valeriat!');
+        alert('Sai ju öeldud, et mõttetu nupp? Oli vaja torkida? OK, nüüd siis tead, et ka javascript pole meile võõras! Ka seda õpid kursusel "Veebilehtede loomine edasijõudnutele", LTAT.03.015! Kui registreerud, tervita Valeriat!');
     }
 </script>
 
