--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 <script src="https://cdn.linearicons.com/free/1.0.0/svgembedder.min.js"></script>
 <script>
     function myFunction() {
-        alert('Sai ju öeldud, et mõttetu nupp? Oli vaja torkida? OK, nüüd siis tead, et ka javascript pole meile võõras! Ka seda õpid kursusel "Veebilehtede loomine edasijõudnutele", LTAT.03.015! Kui registreerud, tervita Valeriat!');
+        alert('Sai ju öeldud, et mõttetu nupp? Oli vaja torkida? OK, nüüd siis tead, et ka javascript pole meile võõras! Ka seda õpid kursusel "Veebilehtede loomine edasijõudnutele", LTAT.03.015! Kui registreerud, tervita meie poolt Valeriat!');
     }
 </script>
 
