--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         <p class="lead">See siin on Bootstrapis tehtud, igati adaptiivne veebileht. Kui ei usu, proovi seda vaadata oma telefonis. Kõik toimib, nagu kellavärk! Loodud spetsiaalselt OOP projekti
             kaitsmiseks. Me nägime sellega mitu tundi vaeva ja kui me selle eest plusspunkte ei saa, siis oleme me kõik pettunud! Isegi õppejõud!</p>
         <hr class="my-4">
-        <p>Me olime kõikides loengutes ja praktikumides aktiivselt (Sorry, Martin, kõikide meie poolt tehtud märkuste ja targutamiste pärast! ;-) kohal, kuid ikkagi ei me suuda meenutada,
-            et oleksime OOP-is veebi õppinud... Või miks on vaja projekti presenteerida veebina. OK, las see jääb
-            seekord.</p>
+        <p>Me olime kõikides loengutes ja praktikumides aktiivselt kohal (Sorry, Martin, kõikide meie poolt tehtud näpuga näidatud vigade ja targutamiste pärast!), kuid ikkagi ei suuda me meenutada,
+            et oleksime OOP-is ka veebi õppinud... Või miks on vaja projekti presenteerida veebina. OK, las see jääb seekord.</p>
+        <p></p>
         <p>Aga kui Sa tahad õppida, kuidas ise sellist lahedat veebi teha, mis kohandub ka Su mobla ekraanile jne jne, siis on
             suureks abiks kursus "Veebilehtede loomine edasijõudnutele", LTAT.03.015. Soovitame! Muideks, see on väga popp kursus! Kiirusta registreerimisega!</p>
         <p class="lead">
