--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         <h1 class="display-4">Tähelepanu!</h1>
         <p class="lead">See siin on Bootstrapis tehtud, igati adaptiivne veebileht. Kui ei usu, proovi seda vaadata oma telefonis. Kõik toimib, nagu kellavärk! Loodud spetsiaalselt OOP projekti
             kaitsmiseks. Me nägime sellega mitu tundi vaeva ja kui me selle eest plusspunkte ei saa, siis oleme me kõik pettunud! Isegi õppejõud!</p>
+        <p class= "lead">Meie suurepärase Java koodi leiad siit: </p>
+        <a href = "https://github.com/mariokaara/pdimanagement">https://github.com/mariokaara/pdimanagement</a>
+
         <hr class="my-4">
         <p>Me olime kõikides loengutes ja praktikumides aktiivselt kohal (Sorry, Martin, kõikide meie poolt tehtud näpuga näidatud vigade ja targutamiste pärast!), kuid ikkagi ei suuda me meenutada,
             et oleksime OOP-is ka veebi õppinud... Või miks on vaja projekti presenteerida veebina. OK, las see jääb seekord.</p>
